[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Panels/Menu_Info_Panel.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Fonts/Menu_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Pause/Char_Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Portraits/cleric.png" type="Texture" id=4]
[ext_resource path="res://Assets/Panels/Hover_Menu_Info_Panel.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Panels/Menu_Info_Dark.tres" type="StyleBox" id=6]



[node name="Char0" type="Button" groups=[
"text",
]]
margin_right = 720.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 190 )
focus_neighbour_top = NodePath("../Char3")
focus_neighbour_right = NodePath("../../../Right/Options_Panel/Options/Item")
focus_neighbour_bottom = NodePath("../Char1")
custom_styles/hover = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
clip_text = true
script = ExtResource( 3 )

[node name="Name" type="Label" parent="." groups=[
"text",
]]
margin_left = 229.117
margin_top = 25.0
margin_right = 312.117
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "BEEFY BOI"

[node name="MP" type="Label" parent="." groups=[
"text",
]]
margin_left = 627.0
margin_top = 100.0
margin_right = 692.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
text = "200/200"
align = 2

[node name="MP_Label" type="Label" parent="." groups=[
"text",
]]
margin_left = 489.0
margin_top = 100.0
margin_right = 513.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
text = "MP"

[node name="HP" type="Label" parent="." groups=[
"text",
]]
margin_left = 624.0
margin_top = 80.0
margin_right = 689.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "500/500"
align = 2

[node name="HP_Label" type="Label" parent="." groups=[
"text",
]]
margin_left = 489.0
margin_top = 80.0
margin_right = 510.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "HP"

[node name="EXP_Label" type="Label" parent="." groups=[
"text",
]]
margin_left = 229.117
margin_top = 100.0
margin_right = 442.117
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
text = "EXP"

[node name="EXP" type="Label" parent="." groups=[
"text",
]]
margin_left = 380.0
margin_top = 100.0
margin_right = 442.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
text = "100/500"
align = 2

[node name="Level" type="Label" parent="." groups=[
"text",
]]
margin_left = 422.0
margin_top = 80.0
margin_right = 440.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "99"
align = 2

[node name="Level_Label" type="Label" parent="." groups=[
"text",
]]
margin_left = 229.0
margin_top = 80.0
margin_right = 258.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "Lv"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 93.4314, 69.6436 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="Lanes" type="HBoxContainer" parent="."]
margin_left = 500.0
margin_top = 15.0
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 35 )
alignment = 1

[node name="Back" type="Button" parent="Lanes" groups=[
"text",
]]
margin_left = 22.0
margin_right = 77.0
margin_bottom = 35.0
focus_neighbour_left = NodePath("../Front")
focus_neighbour_right = NodePath("../Mid")
focus_mode = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "BACK"

[node name="Mid" type="Button" parent="Lanes" groups=[
"text",
]]
margin_left = 81.0
margin_right = 124.0
margin_bottom = 35.0
focus_neighbour_left = NodePath("../Back")
focus_neighbour_right = NodePath("../Front")
focus_mode = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "MID"

[node name="Front" type="Button" parent="Lanes" groups=[
"text",
]]
margin_left = 128.0
margin_right = 198.0
margin_bottom = 35.0
focus_neighbour_left = NodePath("../Mid")
focus_mode = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "FRONT"
[connection signal="pressed" from="Lanes/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Lanes/Mid" to="." method="_on_Mid_pressed"]
[connection signal="pressed" from="Lanes/Front" to="." method="_on_Front_pressed"]
